acm-root/namespaces/opssre/prod/opssre-gateway-prod-asm/external-asm-gateway-prod.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: external-asm-gateway-prod
spec:
  selector:
    istio: ingressgateway-ext
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: MUTUAL
      credentialName: external-gw-tls-credential
      verifyCertificateHash: [F9:25:84:E3:0A:EE:22:35:81:91:3A:E3:E8:9B:09:B8:92:59:69:FD:C8:F0:71:D8:53:65:E2:AE:E2:F5:D3:24]
    hosts:
    - feipopssreaks001.ferguson.com
