acm-root/namespaces/opssre/prod/opssre-gateway-prod-asm/internal-asm-gateway-prod.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: internal-asm-gateway-prod
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: MUTUAL
      credentialName: internal-gw-tls-credential
    hosts:
    - feipopssreaks001.feiaz.ferguson.com
