acm-root/namespaces/opssre/prod/opssre-gateway-prod-asm/kiali-vs-prod.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs-prod
  annotations:
    configmanagement.gke.io/cluster-selector: opssre-prod-clusters
spec:
  hosts:
  - "feipopssreaks001.feiaz.ferguson.com"
  gateways:
  - opssre-gateway-prod/internal-asm-gateway-prod
  http:
  - match:
    - uri:
        prefix: /kiali
    route:
    - destination:
        port:
          number: 20001
        host: kiali.istio-system.svc.cluster.local
